alterations of the td

--- a/src/listagem.html
+++ b/src/listagem.html
@@ -19,86 +19,78 @@
         <div class="menu">
             <a href="./listagem.html">Listagem</a>
             <a href="./cadastro.html">Cadastrar</a>
+          
         </div>
         <table border="1" class="table">
-            <thead>
+            <thead class="table-thead">
                 <tr>
-                    <th>Nome</th>
-                    <th>Sobrenome</th>
-                    <th>Telefone</th>
-                    <th>Endereço</th>
-                    <th>E-mail</th>
-                    <th>Experiência Prévia</th>
+                    <th data-titulo="Nome">Nome</th>
+                    <th data-titulo="Sobrenome">Sobrenome</th>
+                    <th data-titulo="Telefone">Telefone</th>
+                    <th data-titulo="Endereço">Endereço</th>
+                    <th data-titulo="E-mail">E-mail</th>
+                    <th data-titulo="Experiência">Experiência Prévia</th>
                     <th>Ações</th>
-                    
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="table-tbody">
                 <tr>
-                    <td>Alejandra del Carmen </td>
-                    <td>Moreno</td>
-                    <td>+55(31)99999-9999</td>
-                    <td>Rua Paracatu,555</td>
-                    <td>alejandra@newtabacademy.com</td>
-                    <td>Sim</td>
+                    <td data-titulo="Nome">Alejandra del Carmen </td>
+                    <td data-titulo="Sobrenome">Moreno</td>
+                    <td data-titulo="Telefone">+55(31)99999-9999</td>
+                    <td data-titulo="Endereço">Rua Paracatu,555</td>
+                    <td data-titulo="E-mail">alejandra@newtabacademy.com</td>
+                    <td data-titulo="Experiência">Sim</td>
                     <td>
                         <button class="button-primary">Alterar</button>
                     </td>
                 </tr>
                 <tr style="background-color: rgba(0, 0, 0, .6);">
-                    <td>Jaime Fernando </td>
-                    <td>Costa da Cunha</td>
-                    <td>+55(31)99999-9999</td>
-                    <td>Rua Paracatu,555</td>
-                    <td>jaime@newtabacademy.com</td>
-                    <td>Não</td>
+                    <td data-titulo="Nome">Jaime Fernando </td>
+                    <td data-titulo="Sobrenome">Costa da Cunha</td>
+                    <td data-titulo="Telefone">+55(31)99999-9999</td>
+                    <td data-titulo="Endereço">Rua Paracatu,555</td>
+                    <td data-titulo="E-mail">jaime@newtabacademy.com</td>
+                    <td data-titulo="Experiência">Não</td>
                     <td>
                         <button class="button-primary">Alterar</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>Alejandra del Carmen </td>
-                    <td>Moreno</td>
-                    <td>+55(31)99999-9999</td>
-                    <td>Rua Paracatu,555</td>
-                    <td>alejandra@newtabacademy.com</td>
-                    <td>Sim</td>
+                    <td data-titulo="Nome">Alejandra del Carmen </td>
+                    <td data-titulo="Sobrenome">Moreno</td>
+                    <td data-titulo="Telefone">+55(31)99999-9999</td>
+                    <td data-titulo="Endereço">Rua Paracatu,555</td>
+                    <td data-titulo="E-mail">alejandra@newtabacademy.com</td>
+                    <td data-titulo="Experiência">Sim</td>
                     <td>
                         <button class="button-primary">Alterar</button>
                     </td>
                 </tr>
                 <tr style="background-color: rgba(0, 0, 0, .6);">
-                    <td>Jaime Fernando </td>
-                    <td>Costa da Cunha</td>
-                    <td>+55(31)99999-9999</td>
-                    <td>Rua Paracatu,555</td>
-                    <td>jaime@newtabacademy.com</td>
-                    <td>Não</td>
+                    <td data-titulo="Nome">Jaime Fernando </td>
+                    <td data-titulo="Sobrenome">Costa da Cunha</td>
+                    <td data-titulo="Telefone">+55(31)99999-9999</td>
+                    <td data-titulo="Endereço">Rua Paracatu,555</td>
+                    <td data-titulo="E-mail">jaime@newtabacademy.com</td>
+                    <td data-titulo="Experiência">Não</td>
                     <td>
                         <button class="button-primary">Alterar</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>Alejandra del Carmen </td>
-                    <td>Moreno</td>
-                    <td>+55(31)99999-9999</td>
-                    <td>Rua Paracatu,555</td>
-                    <td>alejandra@newtabacademy.com</td>
-                    <td>Sim</td>
+                    <td data-titulo="Nome">Alejandra del Carmen </td>
+                    <td data-titulo="Sobrenome">Moreno</td>
+                    <td data-titulo="Telefone">+55(31)99999-9999</td>
+                    <td data-titulo="Endereço">Rua Paracatu,555</td>
+                    <td data-titulo="E-mail">alejandra@newtabacademy.com</td>
+                    <td data-titulo="Experiência">Sim</td>
                     <td>
                         <button class="button-primary">Alterar</button>
                     </td>
                 </tr>
             </tbody>
         </table>
-        </div>
-   <!-- outro disenho de encabeçado
-       <div class="container">
-     <form action="" class="form">
-        <div class="form-header">
-            <img src="../assets/img/logo-newtab.png"/>
-            <h1 class="form-title">L<span>istagem</span></h1> 
-        </div> -->
-    </div>
+    </div> 
 </body>
 </html>
